# hls_tutorial_examples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example_0/: .gitignore  CMakeLists.txt  Entry.cpp  Makefile  README.md  Synthesis.tcl  entry.cpp  example0.cpp  example0.h
example_0/xilinx/: Entry.cpp  Example0.cpp
example_1/: .gitignore  CMakeLists.txt  Entry.cpp  Example1.cpp  Example1_Pipelined.cpp  Makefile  README.md  Synthesis.tcl  SynthesisPipelined.tcl  SynthesisSolution.tcl  entry.cpp  example1.cpp
example_1/intel/: Example1.cl  Makefile
example_1/xilinx/: Entry.cpp  Example1.cpp  Example1_Pipelined.cpp
example_2/: .gitignore  CMakeLists.txt  Entry.cpp  Example2.cpp  Example2.h  Example2_Buffered.cpp  Example2_Streams.cpp  Makefile  README.md  Synthesis.tcl  SynthesisBuffered.tcl  SynthesisStreams.tcl  Test.cpp  entry.cpp  example2.cpp  example2_buffered.cpp  example2_streams.cpp  test.cpp
example_2/intel/: Example2.cl  Example2.h  Example2_Buffered.cl  Makefile  Test.cpp
example_2/xilinx/: Entry.cpp  Example2.h  Test.cpp
example_3/: .gitignore  CMakeLists.txt  Entry.cpp  Example3  Example3.cpp  Example3.h  Example3_Time.cpp  Makefile  README.md  Synthesis.tcl  SynthesisTime.tcl  Test.cpp  entry.cpp  example3.cpp  example3_time.cpp  test.cpp
example_3/xilinx/: Entry.cpp  Example3.cpp  Example3.h  Example3_Time.cpp  Test.cpp
example_4/: .gitignore  CMakeLists.txt  Example4  Example4.cpp  Example4.h  Makefile  README.md  Synthesis.tcl  Test.cpp  example4.cpp  example4.h  test.cpp
example_4/intel/: Example4  Example4.cl  Example4.h  Makefile  Test.cpp
example_4/intel/emulated_Example4/: Example4.1.bc  Example4.bc  sys_description.legend.txt  sys_description.txt
example_4/xilinx/: Example4.cpp  Example4.h  Test.cpp
example_5/: .gitignore  CMakeLists.txt  Entry.cpp  Example5.cpp  Example5.h  Example5_Reordered.cpp  Makefile  README.md  Synthesis.tcl  SynthesisReordered.tcl  Test.cpp  example5.cpp
example_5/intel/: Example5.cl  Example5.h  Example5_Reordered.cl  Makefile  Test.cpp
example_5/xilinx/: Entry.cpp  Example5.cpp  Example5.h  Example5_Reordered.cpp  Test.cpp
example_6/: .gitignore  CMakeLists.txt  Entry.cpp  Example6.cpp  Example6.h  Example6_Vectorized.cpp  Makefile  README.md  Synthesis.tcl  SynthesisVector.tcl  SynthesisVectorized.tcl  Test.cpp  example6.cpp
example_6/intel/: Example6.cl  Example6.h  Makefile
example_6/xilinx/: Entry.cpp  Example6.cpp  Example6.h  Example6_Vectorized.cpp  Test.cpp
example_7/: .gitignore  CMakeLists.txt  Example7.cpp  Example7.h  Makefile  README.md  Synthesis.tcl  Test.cpp  example7.cpp
example_7/xilinx/: Example7.cpp  Example7.h  Test.cpp
intel_ocl_utils/: ocl_utils.hpp
